static/style.css
/* root for being able to store and easily change colours and such */
:root {
  --c1: #2E3532;
  --c2: #b8F3FF;
  --c3: #0a0908;
  --c4: #f2f4f3;
  --c5: #e7e5e5;
  --c6:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

/* css for body div */
body {
  background-color: var(--c1);
  font-family: var(--c6);
  /*font-size: 14px;*/
}

/* css for header div */
header {
  color: var(--c2);
  background-color: ();
  border-radius: 12px;
}

/*css for the data for each game*/
.gamedata {
  font-size: 18px;
  background-color: var(--c4);
  border-radius: 12px;
  text-align: center;
  margin-left: 400px;
  margin-right: 400px;
}

/* css for h1 div */
h2 {
  background-color: var(--c1);
  color: var(--c4);
}

desc {
  color: var(--c4);
  font: var(--c6);
}

h1 {
  background-color: var(--c1);
  color: var(--c2);
}

table, td {
  border: 0px solid black;
  border-collapse: collapse;
  font-family: var(--c6)
}

th, td {
  padding: 15px;
  text-align: center;
}

th {
  background-color: var(--c2);
}

tr {
  font-family: var(--c6)
  color: var(--c4);
}

tr:nth-child(odd) {
  background-color: var(--c5);
}

tr:nth-child(even) {
  background-color: var(--c4);
}

.button {
  background-color: var(--c2);
  border: none;
  color: var(--c3);
  padding: 7.5px 16px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 5px;
  margin: 2px 1px;
  cursor: pointer;
  border-radius: 12px;
  font: var(--c6);
  border: 2px solid var(--c3);
  box-shadow: 0 4px #999;
}

.button:hover {background-color: var(--c2)}

.button:active {
  background-color: var(--c2);
  box-shadow: 0 2px #666;
  transform: translateY(4px);
}

/* background colour for navbar */
.navbar {
  background-color: var(--c3);
  overflow: hidden;
  border-radius: 12px;
}

/* style for links inside navbar */
.navbar a {
  float: left;
  display: block;
  color: var(--c4);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  border-radius: 12px;
}

/* change colours of links when hovering */
.navbar a:hover {
  background-color: var(--c2);
  color: var(--c3);
}

/* sets colour of link the user is on to be different */
.navbar a.active {
  background-color: var(--c5);
  color: var(--c3);
}

/* hides link used for mobile users to expand navbar */
.navbar .icon {
  display: none;
}

